--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -217,7 +217,7 @@
                                 <table class="table table-hover table-cell-border" id="archive" >
                                     <thead>
                                         <tr style="text-align: center;">
-                                            <th scope="col">No.</th>
+                                            <th scope="col">No</th>
                                             <th scope="col">Last Name</th>
                                             <th scope="col">First Name</th>
                                             <th scope="col">Middle Name</th>
@@ -577,6 +577,8 @@
                     extend: 'excelHtml5',
                     text: 'Generate Excel ',
                     title: 'List of Archived Preschoolers in Barangay '+ '{{ brgy }}' +' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    autoFilter: true,
+
                 },
                 {
                     extend: 'pdfHtml5',
@@ -585,6 +587,7 @@
                     download: 'open',
                     text: 'Generate PDF ',
                     title: 'List of Archived Preschoolers in Barangay '+ '{{ brgy }}' +' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    messageTop: 'Number of Archived Preschoolers: ' + '{{preschooler_60_above_count}}',
                     customize: function(doc){
 
                         gender = t1.column(5).data().toArray();
@@ -592,10 +595,10 @@
                         for (var i = 0; i < gender.length; i++){
                             var val = (gender[i])
                             if (val == 'Male'){
-                                doc.content[1].table.body[i + 1][5].color = '#1aabbb';
+                                doc.content[2].table.body[i + 1][5].color = '#1aabbb';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][5].color = '#e93fca';
+                                doc.content[2].table.body[i + 1][5].color = '#e93fca';
                             }
                         };
 
@@ -604,13 +607,13 @@
                         for (var i = 0; i < vacstatus.length; i++){
                             var val = (vacstatus[i])
                             if (val == 'Complete'){
-                                doc.content[1].table.body[i + 1][11].color = '#28a745';
+                                doc.content[2].table.body[i + 1][11].color = '#28a745';
                             }
                             else if (val == 'No Record'){
-                                doc.content[1].table.body[i + 1][11].color = '#dc3545';
+                                doc.content[2].table.body[i + 1][11].color = '#dc3545';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][11].color = '#ffc107';
+                                doc.content[2].table.body[i + 1][11].color = '#ffc107';
                             }
                         };
 
@@ -619,19 +622,19 @@
                         for (var i = 0; i < WFA.length; i++) {
                             var val = parseFloat(Number(WFA[i].replace(/[^0-9\.-]+/g,"")));
                             if (val == 0){
-                                doc.content[1].table.body[i + 1][8].fillColor = '#d3d3d3';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#d3d3d3';
                             }
                             else if (val > 2.0) {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#f26221';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#f26221';
                             }
                             else if (val >= -2.0 && val <= 2.0 ) {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#00a54f';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#00a54f';
                             }
                             else if (val >= -3.0 && val < -2.0 ) {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#fff102';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#fff102';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#EE1D23';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#EE1D23';
                             }
                         };
 
@@ -639,19 +642,19 @@
                         for (var i = 0; i < HFA.length; i++) {
                             var val = parseFloat(Number(HFA[i].replace(/[^0-9\.-]+/g,"")));
                             if (val == 0){
-                                doc.content[1].table.body[i + 1][9].fillColor = '#d3d3d3';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#d3d3d3';
                             }
                             else if (val > 2.0) {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#00a54f';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#00a54f';
                             }
                             else if (val  >= -2.0 && val <= 2.0 ) {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#00a54f';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#00a54f';
                             }
                             else if (val >= -3.0 && val < -2.0 ) {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#fff102';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#fff102';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#EE1D23';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#EE1D23';
                             }
                         };
                         
@@ -659,28 +662,29 @@
                         for (var i = 0; i < WHFA.length; i++) {
                             var val = parseFloat(Number(WHFA[i].replace(/[^0-9\.-]+/g,"")));
                             if (val == 0){
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#d3d3d3';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#d3d3d3';
                                 }
                                 else if (val > 3.0) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#f26221';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#f26221';
                                 }
                                 else if (val > 2.0 && val <= 3.0 ) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#f26221';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#f26221';
                                 }
                                 else if (val >= -2.0 && val <= 2.0 ) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#00A54F';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#00A54F';
                                 }
                                 else if (val >= -3.0 && val < -2.0 ) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#FFF102';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#FFF102';
                                 }
                                 else {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#EE1D23';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#EE1D23';
                                 }
                         };
                         doc.defaultStyle.fontSize = 12; //2, 3, 4,etc
                         doc.styles.tableHeader.fontSize = 12; //2, 3, 4, etc
                         doc.styles.tableHeader.alignment = 'left';
-                        doc.content[1].table.widths = [ '2%', '10%',  '8%', '10%', '5%', '5%', '10%', '10%','10%','10%','10%','10%',];
+                        doc.content[1].alignment = 'center';
+                        doc.content[2].table.widths = [ '2%', '10%',  '8%', '10%', '5%', '5%', '10%', '10%','10%','10%','10%','10%',];
                     }
                 },
             ],
@@ -706,6 +710,8 @@
                     extend: 'excelHtml5',
                     text: 'Generate Excel ',
                     title: 'List of Preschoolers in Barangay ' +'{{ brgy }}'+ ' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    autoFilter: true,
+
                 },
                 {
                     extend: 'pdfHtml5',
@@ -714,6 +720,9 @@
                     download: 'open',
                     text: 'Generate PDF ',
                     title: 'List of Preschoolers in Barangay ' +'{{ brgy }}'+ ' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    messageTop: 'Number of Preschoolers: ' + '{{all_preschoolersListCount}}' + '                 '+
+                                'Number of Preschoolers With Records: ' + '{{preschooler_with_record_count}}' + '                 '+
+                                'Number of Preschoolers Without Records: ' + '{{preschooler_without_record_count}}' + '                 ',
                     customize: function(doc){
 
                         gender = t2.column(5).data().toArray();
@@ -721,10 +730,10 @@
                         for (var i = 0; i < gender.length; i++){
                             var val = (gender[i])
                             if (val == 'Male'){
-                                doc.content[1].table.body[i + 1][5].color = '#1aabbb';
+                                doc.content[2].table.body[i + 1][5].color = '#1aabbb';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][5].color = '#e93fca';
+                                doc.content[2].table.body[i + 1][5].color = '#e93fca';
                             }
                         };
                         
@@ -732,13 +741,13 @@
                         for (var i = 0; i < vacstatus.length; i++){
                             var val = (vacstatus[i])
                             if (val == 'Complete'){
-                                doc.content[1].table.body[i + 1][11].color = '#28a745';
+                                doc.content[2].table.body[i + 1][11].color = '#28a745';
                             }
                             else if (val == 'No Record'){
-                                doc.content[1].table.body[i + 1][11].color = '#dc3545';
+                                doc.content[2].table.body[i + 1][11].color = '#dc3545';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][11].color = '#ffc107';
+                                doc.content[2].table.body[i + 1][11].color = '#ffc107';
                             }
                         };
 
@@ -746,19 +755,19 @@
                         for (var i = 0; i < WFA.length; i++) {
                             var val = parseFloat(Number(WFA[i].replace(/[^0-9\.-]+/g,"")));
                             if (val == 0){
-                                doc.content[1].table.body[i + 1][8].fillColor = '#d3d3d3';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#d3d3d3';
                             }
                             else if (val > 2.0) {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#f26221';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#f26221';
                             }
                             else if (val >= -2.0 && val <= 2.0 ) {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#00a54f';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#00a54f';
                             }
                             else if (val >= -3.0 && val < -2.0 ) {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#fff102';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#fff102';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][8].fillColor = '#EE1D23';
+                                doc.content[2].table.body[i + 1][8].fillColor = '#EE1D23';
                             }
                         };
 
@@ -766,19 +775,19 @@
                         for (var i = 0; i < HFA.length; i++) {
                             var val = parseFloat(Number(HFA[i].replace(/[^0-9\.-]+/g,"")));
                             if (val == 0){
-                                doc.content[1].table.body[i + 1][9].fillColor = '#d3d3d3';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#d3d3d3';
                             }
                             else if (val > 2.0) {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#00a54f';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#00a54f';
                             }
                             else if (val  >= -2.0 && val <= 2.0 ) {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#00a54f';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#00a54f';
                             }
                             else if (val >= -3.0 && val < -2.0 ) {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#fff102';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#fff102';
                             }
                             else {
-                                doc.content[1].table.body[i + 1][9].fillColor = '#EE1D23';
+                                doc.content[2].table.body[i + 1][9].fillColor = '#EE1D23';
                             }
                         };
                         
@@ -786,28 +795,29 @@
                         for (var i = 0; i < WHFA.length; i++) {
                             var val = parseFloat(Number(WHFA[i].replace(/[^0-9\.-]+/g,"")));
                             if (val == 0){
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#d3d3d3';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#d3d3d3';
                                 }
                                 else if (val > 3.0) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#f26221';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#f26221';
                                 }
                                 else if (val > 2.0 && val <= 3.0 ) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#f26221';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#f26221';
                                 }
                                 else if (val >= -2.0 && val <= 2.0 ) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#00A54F';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#00A54F';
                                 }
                                 else if (val >= -3.0 && val < -2.0 ) {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#FFF102';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#FFF102';
                                 }
                                 else {
-                                    doc.content[1].table.body[i + 1][10].fillColor = '#EE1D23';
+                                    doc.content[2].table.body[i + 1][10].fillColor = '#EE1D23';
                                 }
                         };
                         doc.defaultStyle.fontSize = 12; //2, 3, 4,etc
                         doc.styles.tableHeader.fontSize = 12; //2, 3, 4, etc
                         doc.styles.tableHeader.alignment = 'left';
-                        doc.content[1].table.widths = [ '2%', '10%',  '8%', '10%', '5%', '5%', '10%', '10%','10%','10%','10%','10%',];
+                        doc.content[1].alignment = 'center';
+                        doc.content[2].table.widths = [ '2%', '10%',  '8%', '10%', '5%', '5%', '10%', '10%','10%','10%','10%','10%',];
                     }
                 },
             ],
