--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -589,7 +589,7 @@
                     title: 'List of Archived Preschoolers in Barangay '+ '{{ brgy }}' +' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
                     messageTop: 'Number of Archived Preschoolers: ' + '{{preschooler_60_above_count}}',
                     customize: function(doc){
-
+                        
                         gender = t1.column(5).data().toArray();
                         console.log(gender)
                         for (var i = 0; i < gender.length; i++){
@@ -720,9 +720,17 @@
                     download: 'open',
                     text: 'Generate PDF ',
                     title: 'List of Preschoolers in Barangay ' +'{{ brgy }}'+ ' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
-                    messageTop: 'Number of Preschoolers: ' + '{{all_preschoolersListCount}}' + '                 '+
-                                'Number of Preschoolers With Records: ' + '{{preschooler_with_record_count}}' + '                 '+
-                                'Number of Preschoolers Without Records: ' + '{{preschooler_without_record_count}}' + '                 ',
+                              
+                    messageTop: 'Number of Preschoolers: ' + '{{all_preschoolersListCount}}' + '                                                                        '+
+                        'Number of Preschoolers With Records: ' + '{{preschooler_with_record_count}}' + '                                   '+
+                        'Number of Preschoolers Without Records: ' + '{{preschooler_without_record_count}}' + '                                   ' +
+                        'Number of Moderately Wasted Status: ' + '{{wasted}}' + '                                                 ' +
+                        'Number of Severly Wasted Status: ' + '{{severly}}' + '                                           ' +
+                        'Number of Overweight Status: ' + '{{overweight}}' + '                                                ' +
+                        'Number of Normal Status: ' + '{{normal}}' + '                                                                      ' +
+                        'Number of Obese Status: ' + '{{obese}}' + '                                                                                                                                                                                                   ' +
+                        'Number of Male Preschoolers: ' + '{{total_male}}' + '                                                               ' + 
+                        'Number of Female Preschoolers: ' + '{{total_Female}}',
                     customize: function(doc){
 
                         gender = t2.column(5).data().toArray();
@@ -816,7 +824,6 @@
                         doc.defaultStyle.fontSize = 12; //2, 3, 4,etc
                         doc.styles.tableHeader.fontSize = 12; //2, 3, 4, etc
                         doc.styles.tableHeader.alignment = 'left';
-                        doc.content[1].alignment = 'center';
                         doc.content[2].table.widths = [ '2%', '10%',  '8%', '10%', '5%', '5%', '10%', '10%','10%','10%','10%','10%',];
                     }
                 },
